fix: conserta overflow da tabela na página de empresas e tamanhos em geral da mesma página

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -389,6 +389,9 @@ td:nth-child(3) {
     font-size: 1.5rem;
     padding: 15px;
     text-align: center;
+    width: fit-content;
+    margin: 0 auto;
+    border-radius: 15px;
 }
 .info-empresa {
     font-size: 1.6rem;
@@ -396,15 +399,17 @@ td:nth-child(3) {
     align-self: center;
     border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    height: 50%;
-    min-height: 500px;
-    max-width: 400px;
-    max-height: 800px;
-    margin: 10rem auto;
-    padding: 40px 20px;
+    min-height: 90svh;
+    padding: 40px 20px 0px;
+    text-align: justify;
 }
+.info-empresa h3 {
+    text-align: center;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+    color: #123106;
+}
+
 .form-container {
     background-color: white;
     padding: 30px;
@@ -524,7 +529,13 @@ td:nth-child(3) {
     .info-empresa {
         padding: 50px 30px 160px;
         max-width: 700px;
+        min-height: 800px;
         max-height: 1000px;
+        margin: 10rem auto;
+
+    }
+    .info-empresa h3 {
+        font-size: 2.8rem;
     }
     .botao-download {
         margin: 32px auto;
@@ -620,13 +631,16 @@ td:nth-child(3) {
         margin: 50px auto;
     }
     .info-empresa {
-        padding: 50px 60px 200px;
-        padding: 50px auto;
-        margin: auto;
-        margin: auto;
+        margin: 5rem auto;
         padding: 30px 90px;
-        max-width: 1400px;
-        border-radius: 0;
+        max-width: 1000px;
+        height: 70%;
+        min-height: 600px;
+        max-height: 1000px;
+        text-align: center;
+    }
+    .info-empresa h3 {
+        font-size: 3.5rem;
     }
     .botao-download {
         margin: 50px auto;
